BUGFIX: ImageCarouselBlocks now look mostly OK on mobile.
They work much better on portrait phones and tablets. Unfortunately, there's
still some baffling behavior on landscape phones and when switching between
potrait and landscape on phones. I'll fix that next.

--- a/jetstream/static/jetstream/css/blocks/image-carousel.less
+++ b/jetstream/static/jetstream/css/blocks/image-carousel.less
@@ -1,3 +1,5 @@
+
+
 .image-carousel {
   width: 100%;
   height: 100%;
@@ -33,8 +35,12 @@
   .carousel-inner {
     height: 100%;
 
-    .item > img {
-      height: inherit;
+    .item {
+      text-align: center;
+
+      & > img {
+        height: inherit;
+      }
     }
   }
 
